fix send button position and text jumping

--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -501,7 +501,7 @@ topicWithBursts {
 
 	display: flex;
 
-	align-items: center;
+	align-items: flex-end;
 
 	padding: 5px 0;
 }
@@ -513,12 +513,16 @@ topicWithBursts {
 .ios__messages__input-wrap {
 	height: auto;
 	min-height: 30px !important;
+
+	.input-wrapper {
+		align-items: flex-end;
+	}
 }
 
 .ios__messages__message-input {
 	.text-input {
 		border: 1px solid map-get($colors, other_grey);
-		border-radius: 20px;
+		border-radius: 15px;
 		padding: 4px 40px 4px 10px;
 
 		margin: 0 !important;
@@ -535,8 +539,8 @@ topicWithBursts {
 
 .ios__messages__send-message {
 	position: absolute;
-	right: 20px;
-	top: 15px;
+	right: 18px;
+	bottom: 7px;
 
 	margin: 0 !important;
 
@@ -552,6 +556,10 @@ topicWithBursts {
 
 .messages__form__button-wrap {
 	display: flex;
+
+	button {
+		height: 30px !important;
+	}
 }
 
 .ios__messages__recording-overlay {
